# clomata

./: .gitignore  README.ko.md  README.md
.claude/: CLAUDE.md
.claude-plugin/: marketplace.json
.claude/commands/: commit.md  translate-readme.md
.claude/skills/commit/: SKILL.md  conventional-commits.md
.claude/skills/translate-readme/: SKILL.md
plugins/parallax/: architecture.mmd  pyproject.toml  theory.ko.md  theory.md
plugins/parallax/commands/: parallax.md
plugins/parallax/hooks/: hooks.json
plugins/parallax/prompts/: conversion.ko.md  conversion.md  instruction.ko.md  instruction.md  parallax-prompt.md  role.ko.md  role.md
plugins/parallax/scripts/: parallax.py
plugins/parallax/skills/parallax/: SKILL.md
plugins/parallax/skills/parallax-log/: SKILL.md
plugins/parallax/src/: __init__.py  deprecated_main.py  main.py  prompt.py  state.py
plugins/parallax/src/parallax/: __init__.py  __main__.py  config.py  main.py  transcript.py
plugins/parallax/tests/: test_main.py  test_prompt.py  test_state.py
