[project]
name = "parallax"
version = "0.2.2"
requires-python = ">=3.14"
dependencies = ["pydantic>=2.12.5"]

[project.scripts]
parallax = "src.main:run"
parallax-capture-user-prompt = "src.main:capture_user_prompt"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
module-name = "src"

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.9"]
